# nerfc

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
cmake/: CUDACheckCompute.cmake  UseCUDA.cmake  cuda_compute_capability.cpp
conf/: nerf_synthetic.json
include/: argparse.hpp  nerf_loader.h  utils.h
include/tqdm/: tqdm.h
src/demo/: CMakeLists.txt  checkDeviceInfo.cu  checkDimension.cu  checkThreadIndex.cu  defineGridBlock.cu
src/nerf/: nerf_loader.cu  utils.cu
